# HSEFZ-digital-life

./: .env.example  .gitignore  README.md  add_group.py  add_locked_users.py  add_managers.py  add_student_id.py  add_tutors.py  add_user.py  add_users.py  check_users.py  createsuperuser.py  data_wash.py  db_utils.py  generate_manager.py  generate_password.py  howto.html  main.py  manage.py  pyproject.toml  requirements.txt  start_server.sh  stop_server.sh  test_db_connection.py  uwsgi.ini
bingo/: apps.py  core.py  urls.py  views.py
club/: admin.py  bak.py  core.py  forms.py  models.py  tasks.py  tokens.py  urls.py  views.py
club_main/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
league/: colors.py  forms.py  models.py  urls.py  views.py
record/: apps.py  core.py  forms.py  models.py  urls.py  views.py
static/: base.css  colors.css  create_record.js  create_record_holder.js  event_manage.css  form.css  home-volunteer.css  home.css  homepage.css  info.css  league_manage.js  match_map.js  modify_event.css  modify_event.js  modify_notice.js  modify_score_event.js  page.css  record_holder_manage.js  record_manage.js  score_manage.js  search_user.js  selection_sign_up.css  selection_sign_up.js  sports.css  user_info.css  user_security.css  user_security.js  user_settings.css  utils.js  volunteer_home.js  youth_league_appeal_respond.css  youth_league_course_manage.js  youth_league_homework_inquiry.js
static_assets/: class_team_manage.js  create_league.js  event_manage.css  form.css  home-record.css  home-youth_league.css  match_map.css  modify_class_team.js  (+20 more)
(+119 files in other folders)
